--- a/css/main.css
+++ b/css/main.css
@@ -2736,19 +2736,18 @@ body.mobile-nav-active #mobile-nav-toggle {
 /*-------- start other-issue Area ------------*/
 .single-other-issue .thumb {
   overflow: hidden;
-  margin-bottom: 5%;
 }
 
 .single-other-issue .thumb img {
   width: 100%;
-  -webkit-transition: all 0.5s ease 0s;
-  -moz-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
 .single-other-issue h3 {
-  margin: 50px 0px;line-height:5;
+  margin: 10px 0;
   -webkit-transition: all 0.3s ease 0s;
   -moz-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -2760,7 +2759,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .single-other-issue:hover .thumb img {
-  transform: scale(1.2) rotate(-3deg);
+  transform: scale(1.08) rotate(-3deg);
 }
 
 /*-------- end other-issue Area ------------*/
