--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -119,9 +119,23 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 0.5rem;
 }
 
+.word {
+  display: inline-block;
+  transform: translate(-125%, -230%);
+  position: relative;
+  font-size: 22px;
+  font-weight: bold;
+  top: 50%;
+  left: 50%;
+  white-space: pre;
+  }
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
+  color: inherit;
+  font-weight: 200;
+  letter-spacing: 20px;
 }
 
 abbr[title],
@@ -397,8 +411,9 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-family: inherit;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 2;
   color: inherit;
+  letter-spacing: 1px;
 }
 
 h1, .h1 {
@@ -423,6 +438,8 @@ h5, .h5 {
 
 h6, .h6 {
   font-size: 1rem;
+  letter-spacing: 1px;
+  line-height: 2;
 }
 
 .lead {
@@ -515,7 +532,7 @@ mark,
   max-width: 100%;
   height: auto;
   margin-top: 5%;
-  margin-bottom: 50%;
+  margin-bottom: 10%;
 }
 
 .img-thumbnail {
