--- a/css/main.css
+++ b/css/main.css
@@ -3006,7 +3006,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .about-banner {
-  background: url(../img/top-banner.jpg) center;
+  background: url(../img/hero-bg.jpg) center;
   background-size: cover;
 }
 
