--- a/css/main.css
+++ b/css/main.css
@@ -1492,6 +1492,8 @@ h1, h2, h3, h4, h5, h6 {
   border: 1px solid #f09359;
 }
 
+
+
 .default-switch {
   width: 35px;
   height: 17px;
@@ -2379,12 +2381,12 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 .primary-btn {
-  background: #f8b600;
+  background: #EFE9DA;
   line-height: 42px;
   padding-left: 30px;
   padding-right: 30px;
   border: none;
-  color: #fff;
+  border-radius: 25px;
   display: inline-block;
   font-size: 14px;
   font-weight: 500;
@@ -2395,6 +2397,20 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.3s ease 0s;
   cursor: pointer;
   position: relative;
+  
+}
+
+.primary-btn:hover{
+   background-color: #DBD6C9;
+  border-radius: 25px; 
+  width:140px; 
+  line-height: 42px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: inline-block;
+  font-weight: 700;
+  color: #000000;
+
 }
 
 .primary-btn:focus {
@@ -2413,8 +2429,48 @@ body.mobile-nav-active #mobile-nav-toggle {
   transition: all 0.3s ease 0s;
 }
 
-.primary-btn:hover {
-  color: #fff;
+.secondary-btn:hover {
+  background-color: #fff;
+  border-radius: 25px; 
+  width:140px; 
+  border: 2px solid; 
+  border-color: #EFE9DA;
+  line-height: 42px;
+  padding-left: 30px;
+  padding-right: 30px;
+  display: inline-block;
+  font-weight: 700;
+  color: #000;
+}
+
+.secondary-btn{
+  background: #fff;
+  line-height: 42px;
+  padding-left: 30px;
+  padding-right: 30px;
+  border:1px solid;
+  border-color: #EFE9DA;
+  border-radius: 25px;
+  display: inline-block;
+  font-size: 14px;
+  font-weight: 400;
+  position: relative;
+  -webkit-transition: all 0.3s ease 0s;
+  -moz-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  position: relative;
+}
+
+.secondary-btn a:hover{
+  color:#000;
+  font-weight: 600;
+
+}
+
+.secondary-btn a{
+  color:#00000054;
 }
 
 .primary-btn:hover span {
