--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -9613,7 +9613,7 @@ body {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, .logo {
   font-family: "Work Sans", sans-serif;
-  color: #00204a; }
+  color: black; }
 
 a {
   -webkit-transition: .3s all ease;
@@ -9623,7 +9623,7 @@ a {
 
 .form-control {
   font-size: 16px;
-  height: 52px;
+  height: 30px;
   padding-left: 15px;
   padding-right: 15px; }
   .form-control:hover, .form-control:active, .form-control:focus {
