--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -1798,7 +1798,8 @@ progress {
 
 .form-control {
   display: block;
-  width: 100%;
+  width: 80%;
+  height:42px;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   font-weight: 400;
@@ -10688,4 +10689,5 @@ nav[aria-label="breadcrumb"] li:before {
     font-weight: 700;
     font-size: 20px;
     text-transform: uppercase; }
-  
+
+
