--- a/deluxe-master/property-1.0.0/css/style.css
+++ b/deluxe-master/property-1.0.0/css/style.css
@@ -9666,7 +9666,7 @@ textarea {
 
 .hero {
   position: relative;
-  background-size: cover;
+  background-size: cover !important; 
   background-position: cnter center;
   background-repeat: no-repeat;
   background-color: #00204a; }
@@ -9685,7 +9685,7 @@ textarea {
     height: 100vh;
     min-height: 600px; }
   .hero.page-inner, .hero.page-inner > .container > .row {
-    height: 70vh;
+    height: 70vh !important;
     min-height: 300px; }
   .hero > .container {
     position: relative;
