--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -33,6 +33,7 @@
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Work Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace; }
+  
 
 *,
 *::before,
@@ -62,7 +63,8 @@ body {
   line-height: 1.5;
   color: #212529;
   text-align: left;
-  background-color: #fff; }
+  background-color: #fff;
+ }
 
 [tabindex="-1"]:focus {
   outline: 0 !important; }
@@ -2473,6 +2475,18 @@ input[type="button"].btn-block {
   .fade:not(.show) {
     opacity: 0; }*/
 
+.fade {
+  -webkit-transition: opacity 0.15s linear;
+  -o-transition: opacity 0.15s linear;
+  transition: opacity 0.15s linear; }
+  @media (prefers-reduced-motion: reduce) {
+    .fade {
+      -webkit-transition: none;
+      -o-transition: none;
+      transition: none; } }
+  .fade:not(.show) {
+    opacity: 0; }
+
 .collapse:not(.show) {
   display: none; }
 
@@ -2645,6 +2659,32 @@ input[type="button"].btn-block {
     background-color: #78d5ef; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
+    background-color: transparent; }
+  /*property-1.0.0*/
+  .dropdown-item {
+  display: block;
+  width: 100%;
+  padding: 0.25rem 1rem;
+  clear: both;
+  font-size: 14px;
+  font-weight: 300;
+  letter-spacing: 2.5px;
+  color: #212529cb;
+  text-align: inherit;
+  text-decoration: none;
+  white-space: nowrap;
+  background-color: transparent;
+  border: 0; }
+  .dropdown-item:hover, .dropdown-item:focus {
+    color: #1e2125;
+    background-color: #e9ecef; }
+  .dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #00204a; }
+  .dropdown-item.disabled, .dropdown-item:disabled {
+    color: #adb5bd;
+    pointer-events: none;
     background-color: transparent; }
 
 .dropdown-menu.show {
