--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -2561,7 +2561,7 @@ textarea.form-control-lg {
 .btn-secondary {
   color: #000;
   background-color: #f1f1f1;
-  border-color: #; }
+   }
   .btn-secondary:hover {
     color: #fff;
     background-color: #004848;
