--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -2559,8 +2559,9 @@ textarea.form-control-lg {
     border-color: #00204a; }
 
 .btn-secondary {
-  color: #000;
-  background-color: #f1f1f1;
+  color: #fff;
+  background-color: #769c9c;
+  border-color: #769c9c;
    }
   .btn-secondary:hover {
     color: #fff;
