--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -2561,8 +2561,7 @@ textarea.form-control-lg {
 .btn-secondary {
   color: #fff;
   background-color: #769c9c;
-  border-color: #769c9c;
-   }
+  border-color: #769c9c; }
   .btn-secondary:hover {
     color: #fff;
     background-color: #004848;
@@ -10691,4 +10690,28 @@ nav[aria-label="breadcrumb"] li:before {
     font-size: 20px;
     text-transform: uppercase; }
 
+    .button {
+      background-color: #4CAF50; /* Green */
+      border: none;
+      color: white;
+      padding: 16px 32px;
+      text-align: center;
+      text-decoration: none;
+      display: inline-block;
+      font-size: 16px;
+      margin: 4px 2px;
+      transition-duration: 0.4s;
+      cursor: pointer;
+    }
+    
+    .button1 {
+      background-color: white; 
+      color: black; 
+      border: 2px solid #4CAF50;
+    }
+    
+    .button1:hover {
+      background-color: #4CAF50;
+      color: white;
+    }
 
