--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -8458,7 +8458,9 @@ textarea.form-control {
 .ftco-section {
   position: relative;
   width: 100%;
-  display: block; }
+  display: block;
+  height: 1500px
+; }
   .ftco-section .nav-pills p {
     margin-bottom: 0; }
   .ftco-section .nav-pills .nav-link {
@@ -9386,5 +9388,36 @@ textarea.form-control {
   width: 33.33333%;}
 }
 
+.container,
+.container-fluid,
+.container-sm,
+.container-md,
+.container-lg,
+.container-xl,
+.container-xxl {
+  width: 100%;
+  padding-right: var(--bs-gutter-x, 0.75rem);
+  padding-left: var(--bs-gutter-x, 0.75rem);
+  margin-right: auto;
+  margin-left: auto; }
 
+@media (min-width: 576px) {
+  .container, .container-sm {
+    max-width: 540px; } }
+
+@media (min-width: 768px) {
+  .container, .container-sm, .container-md {
+    max-width: 720px; } }
+
+@media (min-width: 992px) {
+  .container, .container-sm, .container-md, .container-lg {
+    max-width: 960px; } }
+
+@media (min-width: 1200px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl {
+    max-width: 1140px; } }
+
+@media (min-width: 1400px) {
+  .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+    max-width: 1320px; } }
   
