--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9387,4 +9387,12 @@ textarea.form-control {
 }
 
 
+table{
+  border-collapse: collapse;
+}
+th{
+  background-color: #e6f7f2;
+  height: 40px;
+}
+
   
