--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -2982,6 +2982,27 @@ textarea.form-control-lg {
   font-size: 0.875rem;
   border-radius: 0.2rem; }
 
+.tag{
+  text-decoration: none !important;
+  border-radius: 25px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-width: 2px;
+  border-color: transparent;
+  border: none !important;
+  font-size: 12px;
+  background-color: #EFE9DA;
+  color: #000;
+  
+  margin-top: 20px;
+  margin-bottom: 20px;
+  margin-right: 2px;
+  -webkit-transition: .3s all ease;
+  -o-transition: .3s all ease;
+  transition: .3s all ease; }
+
 .fade {
   -webkit-transition: opacity 0.15s linear;
   -o-transition: opacity 0.15s linear;
@@ -4009,8 +4030,17 @@ textarea.form-control-lg {
   word-wrap: break-word;
   background-color: #fff;
   background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem; }
+  border: 0px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+  margin-left: 24px;
+
+  width: 500px;
+  height: 510px;
+  overflow: hidden;
+  float: left;
+  margin-bottom: 0;
+  box-shadow: 0 1px 2px #ddd;}
+
   .card > hr {
     margin-right: 0;
     margin-left: 0; }
@@ -4033,7 +4063,8 @@ textarea.form-control-lg {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
   flex: 1 1 auto;
-  padding: 1rem 1rem; }
+  padding: 1rem 1rem;
+  margin-top: 24px; }
 
 .card-title {
   margin-bottom: 0.5rem; }
@@ -4041,9 +4072,15 @@ textarea.form-control-lg {
 .card-subtitle {
   margin-top: -0.25rem;
   margin-bottom: 0; }
+.card-text{
+  margin-left: 6px; 
+  font-size: 15px; 
+  margin-right: 4px;
+}
 
 .card-text:last-child {
-  margin-bottom: 0; }
+  margin-bottom: 0;
+  }
 
 .card-link + .card-link {
   margin-left: 1rem; }
@@ -4085,7 +4122,8 @@ textarea.form-control-lg {
 .card-img,
 .card-img-top,
 .card-img-bottom {
-  width: 100%; }
+  
+  height:300px; }
 
 .card-img,
 .card-img-top {
@@ -4155,6 +4193,19 @@ textarea.form-control-lg {
     display: flex;
   }
 
+.card-icon-footer {
+  display: flex;
+  align-items: center;
+}
+
+.card-icon-footer p {
+margin-left: 6px;
+margin-right: 10px;
+}
+.card-icon-footer i {
+  margin-right: 4px;
+  margin-left: 160px;
+}
 .accordion-button {
   position: relative;
   display: -webkit-box;
@@ -9646,7 +9697,7 @@ body {
 
 h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, .logo {
   font-family: "Work Sans", sans-serif;
-  color: #00204a; }
+  color: #000; }
 
 a {
   -webkit-transition: .3s all ease;
@@ -10743,6 +10794,7 @@ nav[aria-label="breadcrumb"] li:before {
     margin-top: 10px;
     position: relative;
     margin-right: 12px;
+    margin-left: 5px;
   }
   .love i {
     display: inline-block;
@@ -10750,13 +10802,11 @@ nav[aria-label="breadcrumb"] li:before {
     margin-top: 1px;
   }
   .love i:before {
-    font-size: 28px;
+    font-size: 20px;
   }
   .love div {
     display: inline-block;
-    margin-left: 60px;
     font-size: 14px;
-    margin-top: 5px;
     margin-left: 5px;
   }
   love.active {
@@ -10925,6 +10975,33 @@ nav[aria-label="breadcrumb"] li:before {
     font-size: 20px;
     line-height: 28px;
   }
+  .details footer{
+    display: flex;
+    align-items: center;
+  }
+  .details footer p{
+    margin-right: 16px;
+  }
+  .details footer i{
+    margin-right: 4px;
+    margin-left: 332px;
+  }
+  .detail h4 {
+    color: #157347;
+    margin-right: 12px;
+  }
+  .detail i{
+    font-size: 16px;
+    align-items: center;
+  }
+  .detail-icon{
+    color: black; 
+    display: inline; 
+    font-weight: 400; 
+    font-size: 16px;
+    align-items: center;
+
+  }
   .article-list .details h1 a {
     color: #000;
     text-decoration: none;
@@ -10961,6 +11038,24 @@ nav[aria-label="breadcrumb"] li:before {
     display: flex;
     margin-bottom: 5px;
     font-size: 12px;
+    align-items: center;
+  }
+  .detail h1 {
+    margin: 0;
+    font-size: 20px;
+    line-height: 28px;
+  }
+  
+  .detail h1 a {
+    color: #000;
+    text-decoration: none;
+    transition: all .5s;
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -o-transition: all .5s;
+  }
+  .detail h1 a:hover {
+    color: #005555;
   }
   aside {
     margin-bottom: 40px;
@@ -11060,7 +11155,7 @@ nav[aria-label="breadcrumb"] li:before {
   .sidebar {
     position: fixed;
     top: 0;
-    right: -100px;
+    right: -88px;
     height: 100%;
     width: 320px; 
     background-color: #fff;
