版面整理、圖片、文字

--- a/deluxe-master/css/css/css/style.css
+++ b/deluxe-master/css/css/css/style.css
@@ -10670,3 +10670,6 @@ nav[aria-label="breadcrumb"] li:before {
     font-size: 20px;
     text-transform: uppercase; }
  
+ .list i{
+  margin-right: 8px;
+ }
