--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -2531,7 +2531,7 @@ input[type="button"].btn-block {
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 10rem;
+  min-width: 8rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
@@ -3272,7 +3272,7 @@ input[type="button"].btn-block {
   flex-basis: 0;
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
-  flex-grow: 1;
+  flex-grow: 0;
   text-align: center; }
 
 .tab-content > .tab-pane {
@@ -7331,6 +7331,12 @@ a {
     text-decoration: none;
     color: #8d703b; }
 
+nav[aria-label="breadcrumb"] a {
+      color: #fff; }
+    
+nav[aria-label="breadcrumb"] li:before {
+      color: rgba(255, 255, 255, 0.3) !important; }
+
 /*h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
@@ -8738,13 +8744,14 @@ textarea.form-control {
 .tagcloud a {
   text-transform: uppercase;
   display: inline-block;
-  padding: 4px 10px;
+  padding: 6px 16px;
   margin-bottom: 7px;
   margin-right: 4px;
-  border-radius: 4px;
+  border-radius: 25px;
   color: #000000;
-  border: 1px solid #ccc;
-  font-size: 11px; }
+  border: 0px solid #ccc;
+  font-size: 11px;
+  background-color: #EFE9DA; }
   .tagcloud a:hover {
     border: 1px solid #000; }
 
