--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -1562,7 +1562,7 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 0.38rem 1.75rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
@@ -2853,8 +2853,9 @@ input[type="button"].btn-block {
       margin-left: -1px; }
   .input-group > .form-control:not(:last-child),
   .input-group > .custom-select:not(:last-child) {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0; }
+    border-top-right-radius: 35;
+    border-bottom-right-radius: 35; }
+    
   .input-group > .form-control:not(:first-child),
   .input-group > .custom-select:not(:first-child) {
     border-top-left-radius: 0;
@@ -2898,7 +2899,7 @@ input[type="button"].btn-block {
   margin-right: -1px; }
 
 .input-group-append {
-  margin-left: -1px; }
+  margin-left: 10px; }
 
 .input-group-text {
   display: -webkit-box;
@@ -8119,11 +8120,11 @@ nav[aria-label="breadcrumb"] li:before {
         display: none; } }
 
 .form-control {
-  height: 52px !important;
+  height: 41px !important;
   background: #fff !important;
   color: #000000 !important;
-  font-size: 18px;
-  border-radius: 0px;
+  font-size: 14px;
+  border-radius: 35px;
   -webkit-box-shadow: none !important;
   box-shadow: none !important; }
   .form-control:focus, .form-control:active {
@@ -9427,4 +9428,15 @@ textarea.form-control {
 @media (min-width: 1400px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
     max-width: 1320px; } }
-  
+
+  .button-search{
+    border-radius: 35px; 
+    width: 70px;
+    height: 40px;
+    border: none;
+    padding: 8px;
+    background-color: #efefef;
+    border-top-left-radius:35px !important;
+    border-bottom-left-radius:35px !important;
+
+  }
