--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -3983,6 +3983,7 @@ textarea.form-control-lg {
   .navbar-dark .navbar-text a:focus {
     color: #fff; }
 
+
 .card {
   position: relative;
   display: -webkit-box;
@@ -4016,39 +4017,6 @@ textarea.form-control-lg {
   .card > .list-group + .card-footer {
     border-top: 0; }
 
-.card-member {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  
-  border-radius: 0.25rem; }
-  .card > hr {
-    margin-right: 0;
-    margin-left: 0; }
-  .card > .list-group {
-    border-top: inherit;
-    border-bottom: inherit; }
-    .card > .list-group:first-child {
-      border-top-width: 0;
-      border-top-left-radius: calc(0.25rem - 1px);
-      border-top-right-radius: calc(0.25rem - 1px); }
-    .card > .list-group:last-child {
-      border-bottom-width: 0;
-      border-bottom-right-radius: calc(0.25rem - 1px);
-      border-bottom-left-radius: calc(0.25rem - 1px); }
-  .card > .card-header + .list-group,
-  .card > .list-group + .card-footer {
-    border-top: 0; }
-
 .card-body {
   -webkit-box-flex: 1;
   -ms-flex: 1 1 auto;
@@ -4056,9 +4024,41 @@ textarea.form-control-lg {
   padding: 1rem 1rem;
 }
 .card-member {
-border: 0px;
+  border: none;
+  border-radius: 0px;
+  width: 400px;
 }
+.card-member hr{
+  color:#a0a0a0;
+  margin-bottom:24px;
+}
+.card-member h6{
+font-size:16px;
+margin-bottom: 0px;
 
+}
+.card-member span{
+  display:flex;
+  align-items: center;
+  margin-bottom:24px;
+  }
+.card-member span-i{
+  display:flex;
+  margin-left:165px;
+  font-size: 18px;
+  }
+.card-member i{
+  margin:0 8px;
+  }
+.card-member p{
+  font-size:12px;
+  color:rgba(0, 0, 0);
+  margin-bottom:8px;
+  }
+.progress-bar{
+  height:0.7rem;
+  border-radius: 35px;
+}
 .card-title {
   margin-bottom: 0.5rem; }
 
