--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9399,8 +9399,18 @@ textarea.form-control {
 
 .icon {
   content: url("fa-solid fa-child-dress");
-  margin-left: 15px;
+  margin-left: 30px;
 }
 
-
+dialog{
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 10px;
+  padding: 30px;
+  width: 500px;
+  height: 750px;
+}
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.1);
+}
   
