--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -9877,9 +9877,9 @@ textarea {
   text-decoration: none !important;
   border-radius: 30px;
   padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-bottom: 25px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-width: 2px;
   border-color: transparent;
   border: none !important;
@@ -9895,7 +9895,10 @@ textarea {
 
   .btn.btn-primary {
     background-color: #005555;
-    color: #fff; }
+    color: #fff;
+    text-align: left; 
+  display: inline-block;
+}
 
   .btn:hover {
     bottom:3px;
