--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -11204,3 +11204,20 @@ nav[aria-label="breadcrumb"] li:before {
     font-family: 'Raleway', sans-serif;
     margin-bottom: 30px;
   }
+  .icon {
+    content: url("fa-solid fa-child-dress");
+    
+    margin-left: 30px;
+  }
+
+  dialog{
+    border: none;
+    box-shadow: 0 2px 6px #ccc;
+    border-radius: 10px;
+    padding: 30px;
+    width: 500px;
+    height: 750px;
+  }
+  dialog::backdrop {
+    background-color: rgba(0, 0, 0, 0.1);
+  }
