--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9413,4 +9413,39 @@ dialog{
 dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.1);
 }
-  
+
+.infoModal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.modalContent {
+  border: none;
+  box-shadow: 0 2px 6px #ccc;
+  border-radius: 10px;
+  padding: 40px;
+  width: 500px;
+  height: 750px;
+  background-color: white;
+  margin: 10% auto;
+}
+.name{
+  padding: 20px;
+  width: 200px;
+  height: 450px;
+}
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.child-element {
+  border: 1px solid black;
+}
