--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -16146,7 +16146,26 @@ love.active {
   dialog::backdrop {
     background-color: rgba(0, 0, 0, 0.1);
   }
+  .block-20 {
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 250px;
+    position: relative;
+    display: block; }
 
+    .infoModal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.1);
+    }
   .btn1{
     margin-right:1200px;
     margin-top: 10px;
