--- a/property-1.0.0/css/style.css
+++ b/property-1.0.0/css/style.css
@@ -640,9 +640,10 @@ progress {
 .info-modal {
   position: fixed;
   top: 50%;
-  left: 50%;
+  left: 40%;
   transform: translate(-50%, -50%);
   z-index: 9999;
+  height: 700px;
 }
 
 
