--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -229,6 +229,7 @@ img {
   border-style: none;
 }
 
+
 svg:not(:root) {
   overflow: hidden;
 }
@@ -3628,7 +3629,7 @@ input[type="button"].btn-block {
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 10rem;
+  min-width: 8rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
@@ -4591,7 +4592,7 @@ input[type="button"].btn-block {
   flex-basis: 0;
   -webkit-box-flex: 1;
   -ms-flex-positive: 1;
-  flex-grow: 1;
+  flex-grow: 0;
   text-align: center;
 }
 
@@ -10484,7 +10485,11 @@ a:hover {
   text-decoration: none;
   color: #8d703b;
 }
+nav[aria-label="breadcrumb"] a {
+  color: #fff; }
 
+nav[aria-label="breadcrumb"] li:before {
+  color: rgba(255, 255, 255, 0.3) !important; }
 /*h1, h2, h3, h4, h5,
 .h1, .h2, .h3, .h4, .h5 {
   line-height: 1.5;
@@ -12403,6 +12408,36 @@ textarea.form-control {
   transform: translate(-50%, -50%);
 }
 
+.block-16 .day{
+  background-color: #005555; 
+  width: 110px; 
+  height: 35px; 
+  border-radius: 3px; 
+  float: left;
+}
+.block-16 .day p{
+  color: white; 
+  text-align: center; 
+  line-height: 35px; 
+  font-weight:bold;
+}
+.block-16 .spot{
+background-color: rgba(0, 85, 85, 0.07); 
+width: 705px; 
+height: 35px; 
+border-radius: 3px; 
+float: left; 
+padding: 15px;
+}
+.block-16 .spot p{
+color: black; 
+text-align: left; 
+line-height: 8px; 
+font-weight:bold;
+margin-bottom: 0px;
+}
+
+
 .block-18 .icon>span {
   font-size: 40px;
 }
@@ -12903,7 +12938,7 @@ textarea.form-control {
 }
 
 .sidebar-box {
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   padding: 25px;
   font-size: 15px;
   width: 100%;
@@ -13094,6 +13129,12 @@ textarea.form-control {
 .breadcrumb-item.active {
   color: #6c757d;
 }
+
+nav[aria-label="breadcrumb"] a {
+  color: #fff !important; }
+
+nav[aria-label="breadcrumb"] li:before {
+  color: rgba(255, 255, 255, 0.3) !important; }
 
 .hero {
   position: relative;
@@ -13419,6 +13460,41 @@ textarea.form-control {
   align-items: center;
 }
 
+.box-mod {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.box-side {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 32px;
+}
+
+.box-side h6{
+  font-size: 14px;
+  margin-bottom: 0px;
+}
+.box-side i{
+  margin-right: 5px;
+}
+.box-side p{
+font-size: smaller;
+margin-top: 0px;
+margin-bottom: 0px;
+}
+.box-side .btn-side{
+  display: block;
+  width: 100%; 
+  height: 36px; 
+  background-color: #525f58;
+  color: white; 
+  border:none; 
+  border-radius: 5px;
+}
+
 .text {
   flex: 1;
 }
@@ -13428,25 +13504,133 @@ textarea.form-control {
   margin-left: 30px;
 }
 
-.infoModal {
-  display: none;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.1);
-}
-
 .modalContent {
   border: none;
   box-shadow: 0 2px 6px #ccc;
-  border-radius: 10px;
-  padding: 30px;
+  border-radius: 4px;
+  padding: 40px;
   width: 500px;
-  height: 750px;
+  height: auto;
   background-color: white;
   margin: 10% auto;
+}
+.modalContent .btn-secondary{
+  width: 100px; 
+  height: 35px; 
+  background-color: #005555;
+  color: white;
+  border:none; 
+  border-radius: 30px;
+}
+
+.camp-icon {
+  margin-bottom: 16px;
+  display: flex;
+  align-items: center;
+}
+
+.camp-icon i {
+  margin-right: 16px;
+}
+
+.camp-icon label{
+display: block;
+margin-bottom: 0px;
+align-items: center;
+box-sizing: content-box;
+width: 64px;
+}
+
+.camp-icon p{
+margin-bottom: 0px;
+align-items: center;
+}
+
+.more{
+display: flex; 
+justify-content: flex-end; 
+margin-top: 20px; 
+margin-bottom: 32px;
+font-size:14px;
+
+}
+
+.notice{
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-top: 24px;
+  padding-bottom: 24px;
+  background-color: #F0F0F0; 
+  clear: both;
+}
+.notice .list li{
+  font-size: 12px;
+}
+
+.modal-list{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 32px;
+}
+
+.modal-list input{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 420px; 
+  height: 45px; 
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+  }
+.modal-list input[type="checkbox"] {
+  background-color: #ffffff; 
+  border-style: solid 1px; 
+  border-color: #a0a0a0; 
+  width: 12px; 
+  height: 12px; 
+  border-radius: 2px;
+  margin-bottom: 0px;
+  margin-right: 8px;
+}
+.modal-list select{
+  background-color:#F0F0F0 ; 
+  border-radius: 10px;
+  border-style: none; 
+  width: 40px; 
+  color: #9D9D9D; 
+  text-align: center;
+}
+.supply{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+margin-top: 16px;
+margin-bottom: 24px;
+}
+.supply p{
+  box-sizing: content-box;
+  margin-bottom: 0px;
+  width:60px;
+}
+
+.modal-list textarea{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color: #9D9D9D; 
+  width: 420px; 
+  border-radius: 8px;
+  padding: 15px;
+  font-weight: 300;
+  font-size: 12px;
+  margin-bottom: 20px;
+  }
+
+.col-md-4{
+  display: flex;
+  align-items: center;
+  margin-bottom: 12px;
 }
