--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -12422,6 +12422,9 @@ textarea.form-control {
   font-weight:bold;
 }
 .block-16 .spot{
+display: flex;
+justify-content: space-between;
+align-items: center;
 background-color: rgba(0, 85, 85, 0.07); 
 width: 705px; 
 height: 35px; 
@@ -12435,6 +12438,10 @@ text-align: left;
 line-height: 8px; 
 font-weight:bold;
 margin-bottom: 0px;
+}
+.block-16 .spot i{
+  display: flex;
+  justify-content: flex-end;
 }
 
 
@@ -13633,4 +13640,9 @@ margin-bottom: 24px;
   display: flex;
   align-items: center;
   margin-bottom: 12px;
+}
+.btn-icon{
+  background-color: transparent;
+  border: none;
+  outline: none;
 }
