--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -13706,3 +13706,15 @@ margin-bottom: 24px;
   max-height: 200px;
   margin-top: 10px;
 }
+.col-md-6 input{
+  background-color: #F0F0F0; 
+  border-style: none; 
+  color:	#9D9D9D; 
+  width: 100%; 
+  height: 45px; 
+  border-radius: 35px;
+  padding: 20px;
+  margin-bottom: 20px;
+  font-weight: 300;
+  font-size: 12px;
+}
