--- a/deluxe-master/css/style.css
+++ b/deluxe-master/css/style.css
@@ -9553,3 +9553,20 @@ article .detail {
 .detail h1 a:hover {
   color: #005555;
 }
+
+.container-eq {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+
+ }
+ .row-eq {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+  margin-right: -15px;
+  margin-left: -15px; }
